--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white">Crit Damage</td></font>
 	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white"><input type="text" size="12" class="calculator-screen" name="critd" value="40.0%" disabled /><br></font></td>
 	</tr>
-
+	
 	<tr>
 	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white">DH Chance<font size="12" color="white"></font></td>
 	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white"><input type="text" size="12" class="calculator-screen" name="dhitc" value="0.0%" disabled /></font></td>
@@ -246,6 +246,8 @@
 	</tr>
 </table>
 
+	<img src="img.png" alt="Norah Blackfell">
+
 <table bgcolor="#171819" border="3" border="3" width="100" height="30">
 	<font color="black">
 	<tr>
@@ -269,6 +271,7 @@
 	
 </table>
   </div>
+  
 	<footer id="footer">
 	<p><font color=00a4f6>Values from <a href="http://theoryjerks.akhmorning.com/"><font color="00a4f6">http://theoryjerks.akhmorning.com/</font></a></font></p>
 	</footer>
