--- a/index.html
+++ b/index.html
@@ -161,7 +161,9 @@
 <div id="container">
 	<header>
 			<h1><font color=36393f>FFXIV STAT CALCULATOR (5.x)</font><br>
-			<font size="6" color=36393f>By Norah Blackfell(Omega)</font></h1>
+			<font size="6" color=36393f>By Norah Blackfell(Omega)</font><br>
+			<font size="3" color=36393f>Values source: <a size="2" href="http://theoryjerks.akhmorning.com/"><font color="36393f">theoryjerks.akhmorning.com</font></a></font>
+			</h1>
 	</header>
 
 	
@@ -207,7 +209,7 @@
 	<font color="black">
 	
 	<tr>
-	<td colspan =2 align="center" valign="middle"><font color=ffffff>Your Stats in detail:</font></td>
+	<td colspan =2 align="center" valign="middle"><font color=ffffff>Your Stats in detail:</font> </td>
 	</tr>
 	
 	<tr>
@@ -246,7 +248,7 @@
 	</tr>
 </table>
 
-	<img src="https://raw.githubusercontent.com/Maffohub/FFXIV-Stat-Calculator/master/img.PNG" alt="Norah Blackfell">
+	<img src="img.png" alt="Norah Blackfell">
 
 <table bgcolor="#171819" border="3" border="3" width="100" height="30">
 	<font color="black">
@@ -268,12 +270,12 @@
 	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white">4.0s</font></td>
 	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white"><input type="text" size="3" class="calculator-screen" name="gcd4" value="4.0s" disabled /></font></td>
 	</tr>
-	
 </table>
+
   </div>
   
 	<footer id="footer">
-	<p><font color=00a4f6>Values from <a href="http://theoryjerks.akhmorning.com/"><font color="00a4f6">http://theoryjerks.akhmorning.com/</font></a></font></p>
+	<p><font color=00a4f6>If you like it you can donate <a href="https://paypal.me/maffone"><font color="00a4f6">Here</font></a>, or just mail me some Gil, i'm poor ヾ(￣0￣ )ノ(^_^;)</font></p>
 	</footer>
 </div>
 </body>
