--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 	</tr>
 </table>
 
-	<img src="img.PNG" alt="Norah Blackfell">
+	<img src="https://raw.githubusercontent.com/Maffohub/FFXIV-Stat-Calculator/master/img.PNG" alt="Norah Blackfell">
 
 <table bgcolor="#171819" border="3" border="3" width="100" height="30">
 	<font color="black">
