--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 <div class="calculator">
 
 <form name="calculator">
-<table bgcolor="#171819" border="3" border="3" width="100" height="100">
+<table bgcolor="#171819" border="3" border="3" width="50" height="50">
 	<font color="black">
 	
 	<tr>
@@ -180,22 +180,19 @@
 	
 	<tr>
 	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white">Critical</td>
-	<td align="center" valign="middle"><font color="black"><input type="number" class="calculator-screen" name="crit" placeholder="380" maxlength="5" enabled /></td>
+	<td align="center" valign="middle"><font color="black"><input type="number" class="calculator-screen" name="crit" placeholder="380" style="width: 60px;" min="0" max="9999" enabled /></td>
 	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white">Direct Hit</font></td>
-	<td align="center" valign="middle"><font color="black"><input type="number" class="calculator-screen" name="dhit" placeholder="380" maxlength="5" enabled /></td>
+	<td align="center" valign="middle"><font color="black"><input type="number" class="calculator-screen" name="dhit" placeholder="380" style="width: 60px;" min="0" max="9999" enabled /></td>
 	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white">Determination</font></td>
-	<td align="center" valign="middle"><font color="black"><input type="number" class="calculator-screen" name="det" placeholder="340" maxlength="5" enabled /></td>
+	<td align="center" valign="middle"><font color="black"><input type="number" class="calculator-screen" name="det" placeholder="340" style="width: 60px;" min="0" max="9999" enabled /></td>
 	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white">Speed</font></td>
-	<td align="center" valign="middle"><font color="black"><input type="number" class="calculator-screen" name="spd" placeholder="380" maxlength="5" enabled /></td>
-	</tr>
-	
-	<tr>
+	<td align="center" valign="middle"><font color="black"><input type="number" class="calculator-screen" name="spd" placeholder="380" style="width: 60px;" min="0" max="9999" enabled /></td>
 	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white">Tenacity</font></td>
-	<td align="center" valign="middle"><font color="black"><input type="number" class="calculator-screen" name="ten" placeholder="380" maxlength="5" enabled /></td>
+	<td align="center" valign="middle"><font color="black"><input type="number" class="calculator-screen" name="ten" placeholder="380" style="width: 60px;" min="0" max="9999" enabled /></td>
 	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white">Piety</font></td>
-	<td align="center" valign="middle"><font color="black"><input type="number" class="calculator-screen" name="pie" placeholder="340" maxlength="5" enabled /></td>
+	<td align="center" valign="middle"><font color="black"><input type="number" class="calculator-screen" name="pie" placeholder="340" style="width: 60px;" min="0" max="9999" enabled /></td>
 	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white">Defense</td>
-	<td align="center" valign="middle"><font color="black"><input type="number" class="calculator-screen" name="defstat" placeholder="380" maxlength="5" enabled /></td>
+	<td align="center" valign="middle"><font color="black"><input type="number" class="calculator-screen" name="defstat" placeholder="380" style="width: 60px;" min="0" max="9999" enabled /></td>
 	</tr>
 	
 	
@@ -214,41 +211,41 @@
 	
 	<tr>
 	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white">Crit Chance</td></font>
-	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white"><input type="text" size="12" class="calculator-screen" name="critc" value="5.0%" disabled /></font></td>
+	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white"><input type="text" style="width: 80px;" class="calculator-screen" name="critc" value="5.0%" disabled /></font></td>
 	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white">Crit Damage</td></font>
-	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white"><input type="text" size="12" class="calculator-screen" name="critd" value="40.0%" disabled /><br></font></td>
+	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white"><input type="text" style="width: 80px;" class="calculator-screen" name="critd" value="40.0%" disabled /><br></font></td>
 	</tr>
 	
 	<tr>
-	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white">DH Chance<font size="12" color="white"></font></td>
-	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white"><input type="text" size="12" class="calculator-screen" name="dhitc" value="0.0%" disabled /></font></td>
+	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white">DH Chance<font style="width: 80px;" color="white"></font></td>
+	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white"><input type="text" style="width: 80px;" class="calculator-screen" name="dhitc" value="0.0%" disabled /></font></td>
 	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white">DH Damage</font></td>
-	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white"><input type="text" size="12" class="calculator-screen" name="dhdamage" value="(static) +25%" disabled /></font></td>
+	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white"><input type="text" style="width: 80px;" class="calculator-screen" name="dhdamage" value="(static) +25%" disabled /></font></td>
 	</tr>
 	
 	<tr>
 	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white">DET Base Damage</font></td>
-	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white"><input type="text" size="12" class="calculator-screen" name="deter" value="+0.0%" disabled /></font></td>
+	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white"><input type="text" style="width: 80px;" class="calculator-screen" name="deter" value="+0.0%" disabled /></font></td>
 	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white">Tenacity DMG/DEF</font></td>
-	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white"><input type="text" size="12" class="calculator-screen" name="tendmg" value="+0.0%" disabled /></font></td>
+	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white"><input type="text" style="width: 80px;" class="calculator-screen" name="tendmg" value="+0.0%" disabled /></font></td>
 	</tr>
 	
 	<tr>
 	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white">Defense Mitigation</td></font>
-	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white"><input type="text" size="12" class="calculator-screen" name="defre" value="5.0%" disabled /></font></td>
+	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white"><input type="text" style="width: 80px;" class="calculator-screen" name="defre" value="5.0%" disabled /></font></td>
 	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white">Regen MP/tick</font></td>
-	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white"><input type="text" size="12" class="calculator-screen" name="mpr" value="+0 MP/tick" disabled /></font></td>
+	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white"><input type="text" style="width: 80px;" class="calculator-screen" name="mpr" value="+0 MP/tick" disabled /></font></td>
 	</tr>
 	
 	<tr>
 	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white">Speed</font></td>
-	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white"><input type="text" size="12" class="calculator-screen" name="gcdred" value="+0.0%" disabled /></font></td>
+	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white"><input type="text" style="width: 80px;" class="calculator-screen" name="gcdred" value="+0.0%" disabled /></font></td>
 	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white">DoT Tick damage</font></td>
-	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white"><input type="text" size="12" class="calculator-screen" name="gcddot" value="+0.0%" disabled /></font></td>
+	<td bgcolor=#7d7d7d align="center" valign="middle"><font color="white"><input type="text" style="width: 80px;" class="calculator-screen" name="gcddot" value="+0.0%" disabled /></font></td>
 	</tr>
 </table>
 
-	<img src="https://raw.githubusercontent.com/Maffohub/FFXIV-Stat-Calculator/master/img.PNG" alt="Norah Blackfell">
+	<img src="img.png" alt="Norah Blackfell">
 
 <table bgcolor="#171819" border="3" border="3" width="100" height="30">
 	<font color="black">
