--- a/index.html
+++ b/index.html
@@ -395,6 +395,7 @@
   
 	<footer id="footer">
 	<p><font color=00a4f6>If you like it you can donate <a href="https://paypal.me/maffone"><font color="00a4f6">Here</font></a>, or just mail me some Gil, i'm poor ヾ(￣0￣ )ノ(^_^;)<br>
+		Also if you can leave some feedback on this <a href="https://www.reddit.com/r/ffxiv/comments/d3vdps/ffxiv_stat_calculator_updated/"><font color="00a4f6">reddit post</font></a> it'd be much appreciated ^^
 		</font></p>
 	</footer>
 </div>
